# flamapp

./: README.md
EdgeDetectionApp/OpenCV-android-sdk/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
EdgeDetectionApp/app/: build.gradle.kts
EdgeDetectionApp/app/src/main/: AndroidManifest.xml
EdgeDetectionApp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
EdgeDetectionApp/app/src/main/java/com/example/edgedetectionapp/: MainActivity.kt
EdgeDetectionApp/gradle/wrapper/: gradle-wrapper.properties
EdgeDetectionApp/opencv/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake
